refactor : stream list convertor use the toList()